fix broken style

--- a/src/SimpleBet/Client/app/betCreator/challenger/challenger.css
+++ b/src/SimpleBet/Client/app/betCreator/challenger/challenger.css
@@ -14,6 +14,7 @@
 	position: fixed;
 	margin: 0;
 	top: 100px; bottom: auto;
+    left: 0; right: 0;
 	z-index: 800;
 	padding-left: 30px;
 }
@@ -45,6 +46,7 @@
 	position: fixed;
 	margin: 0;
 	top: 50px; bottom: auto;
+    left: 0px; right: 0px;
 	z-index: 900;
 	width: 100%;
 	height: 50px;
@@ -102,6 +104,7 @@
 	position: fixed;
 	margin: 0;
 	top: auto; bottom: 0;
+    left: 0px; right: 0px;
 	height: 50px;
 	width: 100%;
 	background-color: #ff806f;
